[package]
name = "bsplitter-wasm"
version = "0.1.0"
authors = ["Ronnie Curtis <ronnie.curtis@franklin.ai>"]
edition = "2018"

[lib]
crate-type = ["cdylib", "rlib"]

[features]
default = ["console_error_panic_hook"]

[dependencies]
wasm-bindgen = "0.2.84"

# The `console_error_panic_hook` crate provides better debugging of panics by
# logging them with `console.error`. This is great for development, but requires
# all the `std::fmt` and `std::panicking` infrastructure, so isn't great for
# code size when deploying.
console_error_panic_hook = { version = "0.1.7", optional = true }
web-sys = { version = "0.3.64", features = ["console", "CanvasRenderingContext2d", "ImageData"] }
image = "0.24.7"
rustface = "0.1.7"
imageproc = "0.23.0"

[dev-dependencies]
wasm-bindgen-test = "0.3.34"

[profile.release]
# Tell `rustc` to optimize for small code size.
opt-level = "s"
